--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web-worker": "^1.2.0"
   },
   "keywords": [
     "web-worker",
