--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "multee-browser",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "Turn the browser's multitasking Web Workers into simple async functions",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint ./ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint ./ --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest",
-    "dist": "mkdir -p dist && cp src/*.* package.json README.md dist/ && cd dist/ && npm publish"
+    "test": "mocha test/**/*.test.mjs",
+    "updatePublish": "node publish.js"
   },
   "author": "Adrian Burlacu <adrian.burlacu@live.com>",
   "license": "ISC",
@@ -17,12 +17,13 @@
   },
   "homepage": "https://www.npmjs.com/package/multee-browser",
   "devDependencies": {
-    "@types/jest": "^26.0.19",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^14.14.13",
     "@types/uuid": "^8.3.0",
+    "chai": "^4.3.6",
     "eslint": "^7.15.0",
-    "jest": "^26.6.3",
-    "ts-node": "^9.1.1"
+    "mocha": "^10.1.0"
   },
   "dependencies": {
     "uuid": "^8.3.2",
