--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.3.6",
     "eslint": "^7.15.0",
     "flat-promise": "^1.0.3",
+    "latest-version": "^7.0.0",
     "mocha": "^10.1.0"
   },
   "dependencies": {
