--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint ./ --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "mocha test/**/*.test.mjs",
+    "test": "mocha test/**/*.test.js",
     "updatePublish": "node publish.js"
   },
   "author": "Adrian Burlacu <adrian.burlacu@live.com>",
